Rewrote my about me and added bolded text

--- a/index.html
+++ b/index.html
@@ -73,15 +73,17 @@
                 <div class="card-body">
                     <h4 class="card-title text-light">About Me:</h4>
                     <h5 class="card-text text-info">
-                        My name is Cole Anderson. I graduated as Salutatorian
-                        from Charleston High School in 2018 and then went on to
-                        become a student of the Base Camp Coding Academy's class
-                        of 2019. I started out with no previous knowledge of
-                        computer languages; however, over these these few months
-                        I've definitely gained a serious appreciation for this
-                        field and for the code that I write. I now can say I
-                        enjoy my work, and I'm very excited for what the future
-                        holds.
+                        My name is <b>Cole Anderson</b>, and I am working
+                        intensively towards my goal of becoming a
+                        <b>Software Developer</b>. I graduated as
+                        <b>Salutatorian</b> from Charleston High School in 2018,
+                        and I then went on to become a student of the
+                        <b>Base Camp Coding Academy</b>'s class of 2019. I
+                        started out with no previous knowledge of computer
+                        languages; however, I've gained a serious appreciation
+                        for this field and for the code that I help create. I
+                        now can say I greatly enjoy my work, and I'm very eager
+                        to see what the future holds.
                     </h5>
                 </div>
             </div>
@@ -92,15 +94,15 @@
                     </h4>
                     <h5 class="card-text text-info">
                         <ul>
-                            <li>Java / Spring</li>
-                            <li>Python / Django</li>
-                            <li>Front End Development</li>
-                            <li>Object Oriented Design</li>
-                            <li>Pair-Programming</li>
-                            <li>Github</li>
-                            <li>Unit Testing</li>
-                            <li>SQL</li>
-                            <li>Ubuntu</li>
+                            <li><b>Java / Spring</b></li>
+                            <li><b>Python / Django</b></li>
+                            <li><b>Front End Development</b></li>
+                            <li><b>Object Oriented Design</b></li>
+                            <li><b>Pair-Programming</b></li>
+                            <li><b>Github</b></li>
+                            <li><b>Unit Testing</b></li>
+                            <li><b>SQL</b></li>
+                            <li><b>Ubuntu</b></li>
                         </ul>
                     </h5>
                 </div>
