Added BCCA Applications
Added in a new project. This one being about the
Spring project that allowed for the user, and
admin, side of the BCCA application process.

--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,98 @@
                 </h5>
             </div>
         </nav>
-        <div class="container">
+        <div class="container pb-3">
+            <div class="card text-light">
+                <div class="card-body">
+                    <h3 class="project_title">
+                        BCCA Applications
+                    </h3>
+                    <div>
+                        <h6 class="d-flex pr-2">
+                            Coded With:
+                            <p class="text-info pl-2">Java, Spring</p>
+                        </h6>
+                        <h6 class="d-flex pr-2">
+                            Started:
+                            <p class="text-info pl-2">Feb 25, 2019</p>
+                        </h6>
+                        <div class="d-flex">
+                            <h6>Link:</h6>
+                            <h6 class="pl-2">
+                                <a
+                                    class="text-info"
+                                    href="https://github.com/johnmorgan2000/spring-admisson"
+                                    >Github Link</a
+                                >
+                            </h6>
+                        </div>
+                        <div class="description_container">
+                            <h6>Description:</h6>
+                            <h6 class="text-info">
+                                This project is design to allow a user to fill
+                                out an application to become a student at BCCA,
+                                and to allow a BCCA admin to go in and review
+                                all of the submitted applications. This program
+                                made using the Spring framework which allowed us
+                                to take in data from the user, store that data
+                                in a database, and then show that data to the
+                                admin. This project taught me a lot about
+                                working with my team, and it helped me to
+                                understand how different code should coexist
+                                among themselves.
+                            </h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card text-light mb-3">
+                <div class="card-body">
+                    <h3 class="project_title">Loan Calculator</h3>
+                    <div>
+                        <h6 class="d-flex pr-2">
+                            Coded With:
+                            <p class="text-info pl-2">JS, HTML & CSS</p>
+                        </h6>
+                        <h6 class="d-flex pr-2">
+                            Programming Age:
+                            <p class="text-info pl-2">8 Months</p>
+                        </h6>
+                        <div class="d-flex">
+                            <h6>Links:</h6>
+                            <h6 class="pl-2">
+                                <a
+                                    class="text-info"
+                                    href="https://coleanderson7278.github.io/LoanCalculator/"
+                                    >Website Link</a
+                                >
+                            </h6>
+                            <p>,</p>
+                            <h6 class="pl-2">
+                                <a
+                                    class="text-info"
+                                    href="https://github.com/ColeAnderson7278/LoanCalculator"
+                                    >Github Link</a
+                                >
+                            </h6>
+                        </div>
+                        <div class="description_container">
+                            <h6>Description:</h6>
+                            <h6 class="text-info">
+                                This is an application I worked on during my
+                                independent study time. It is designed to help a
+                                user calculate monthly payments on a loan given
+                                the amount borrowed, the time allowed to pay it
+                                off, and the interest rate on the loan. The
+                                application is very simple in it's design yet
+                                very effective in what it was made to
+                                accomplish. The simple design also allows for a
+                                much nicer user experience, and it helps to make
+                                sure the program works on all types of media.
+                            </h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="card text-light">
                 <div class="card-body">
                     <h3 class="project_title">RainFall</h3>
@@ -168,94 +259,6 @@
                                 languages in project, and I also got to show my
                                 project to others to see how they liked it, used
                                 it, and just how it looked on different formats.
-                            </h6>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card text-light">
-                <div class="card-body">
-                    <h3 class="project_title">
-                        Practicing Object-Oriented Design
-                    </h3>
-                    <div>
-                        <h6 class="d-flex pr-2">
-                            Coded With:
-                            <p class="text-info pl-2">Python</p>
-                        </h6>
-                        <h6 class="d-flex pr-2">
-                            Programming Age:
-                            <p class="text-info pl-2">4 Months</p>
-                        </h6>
-                        <div class="d-flex">
-                            <h6>Link:</h6>
-                            <h6 class="pl-2">
-                                <a
-                                    class="text-info"
-                                    href="https://github.com/ColeAnderson7278/Practicing_OOD"
-                                    >Practicing OOD</a
-                                >
-                            </h6>
-                        </div>
-                        <div class="description_container">
-                            <h6>Description:</h6>
-                            <h6 class="text-info">
-                                This is a personal project that I started around
-                                the end of September. What this project focuses
-                                on is my better understanding, and use, of
-                                object-oriented design. I do this by reading
-                                <i>Practical Object-Oriented Design In Ruby</i>,
-                                and I then use my new knowledge to rewrite the
-                                Ruby examples into Python code while explaining
-                                myself in my commit messages.
-                            </h6>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card text-light mb-3">
-                <div class="card-body">
-                    <h3 class="project_title">Loan Calculator</h3>
-                    <div>
-                        <h6 class="d-flex pr-2">
-                            Coded With:
-                            <p class="text-info pl-2">JS, HTML & CSS</p>
-                        </h6>
-                        <h6 class="d-flex pr-2">
-                            Programming Age:
-                            <p class="text-info pl-2">8 Months</p>
-                        </h6>
-                        <div class="d-flex">
-                            <h6>Links:</h6>
-                            <h6 class="pl-2">
-                                <a
-                                    class="text-info"
-                                    href="https://coleanderson7278.github.io/LoanCalculator/"
-                                    >Website Link</a
-                                >
-                            </h6>
-                            <p>,</p>
-                            <h6 class="pl-2">
-                                <a
-                                    class="text-info"
-                                    href="https://github.com/ColeAnderson7278/LoanCalculator"
-                                    >Github Link</a
-                                >
-                            </h6>
-                        </div>
-                        <div class="description_container">
-                            <h6>Description:</h6>
-                            <h6 class="text-info">
-                                This is an application I worked on during my
-                                independent study time. It is designed to help a
-                                user calculate monthly payments on a loan given
-                                the amount borrowed, the time allowed to pay it
-                                off, and the interest rate on the loan. The
-                                application is very simple in it's design yet
-                                very effective in what it was made to
-                                accomplish. The simple design also allows for a
-                                much nicer user experience, and it helps to make
-                                sure the program works on all types of media.
                             </h6>
                         </div>
                     </div>
