--- a/index.html
+++ b/index.html
@@ -82,8 +82,10 @@
                         started out with no previous knowledge of computer
                         languages; however, I've gained a serious appreciation
                         for this field and for the code that I help create. I
-                        now can say I greatly enjoy my work, and I'm very eager
-                        to see what the future holds.
+                        now can say I greatly enjoy my work as I learn
+                        constantly and over come new obstacles as they arrive. I
+                        am very excited to see what the future holds for me and
+                        what I can make of it.
                     </h5>
                 </div>
             </div>
