Updated Projects Page

--- a/projects.html
+++ b/projects.html
@@ -70,6 +70,54 @@
         <div class="container pb-3">
             <div class="card text-light">
                 <div class="card-body">
+                    <h3 class="project_title">Rainfall 2</h3>
+                    <div>
+                        <h6 class="d-flex pr-2">
+                            Coded With:
+                            <p class="text-info pl-2">
+                                HTML, CSS, JS & Bootstrap
+                            </p>
+                        </h6>
+                        <h6 class="d-flex pr-2">
+                            Started:
+                            <p class="text-info pl-2">Apr 2, 2019</p>
+                        </h6>
+                        <div class="d-flex">
+                            <h6>Link:</h6>
+                            <h6 class="pl-2">
+                                <a
+                                    class="text-info"
+                                    href="https://coleanderson7278.github.io/Rainfall.2.0/"
+                                    >Website Link</a
+                                >
+                            </h6>
+                            ,
+                            <h6 class="pl-2">
+                                <a
+                                    class="text-info"
+                                    href="https://github.com/ColeAnderson7278/Rainfall.2.0"
+                                    >Github Link</a
+                                >
+                            </h6>
+                        </div>
+                        <div class="description_container">
+                            <h6>Description:</h6>
+                            <h6 class="text-info">
+                                This is a simple side scrolling game that was
+                                built using the ideas of the original Rainfall
+                                game I made at the end of 2018. This one,
+                                however, takes the concepts of the first game
+                                and updates it. The main update of this new
+                                application was the use of ReactJS and the
+                                addition of a Heroku database that would hold on
+                                to user submitted scores.
+                            </h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card text-light">
+                <div class="card-body">
                     <h3 class="project_title">
                         BCCA Applications
                     </h3>
@@ -120,8 +168,8 @@
                             <p class="text-info pl-2">JS, HTML & CSS</p>
                         </h6>
                         <h6 class="d-flex pr-2">
-                            Programming Age:
-                            <p class="text-info pl-2">8 Months</p>
+                            Started:
+                            <p class="text-info pl-2">Jan 23, 2019</p>
                         </h6>
                         <div class="d-flex">
                             <h6>Links:</h6>
@@ -161,60 +209,6 @@
             </div>
             <div class="card text-light">
                 <div class="card-body">
-                    <h3 class="project_title">RainFall</h3>
-                    <div>
-                        <h6 class="d-flex pr-2">
-                            Coded With:
-                            <p class="text-info pl-2">
-                                HTML, CSS, JS & Bootstrap
-                            </p>
-                        </h6>
-                        <h6 class="d-flex pr-2">
-                            Programming Age:
-                            <p class="text-info pl-2">4 Months</p>
-                        </h6>
-                        <div class="d-flex">
-                            <h6>Link:</h6>
-                            <h6 class="pl-2">
-                                <a
-                                    class="text-info"
-                                    href="https://coleanderson7278.github.io/RainFall/"
-                                    >Website Link</a
-                                >
-                            </h6>
-                            ,
-                            <h6 class="pl-2">
-                                <a
-                                    class="text-info"
-                                    href="https://github.com/ColeAnderson7278/RainFall"
-                                    >Github Link</a
-                                >
-                            </h6>
-                        </div>
-                        <div class="description_container">
-                            <h6>Description:</h6>
-                            <h6 class="text-info">
-                                This is a simple side scrolling game where you
-                                dodge falling rain drops. I made it using basic
-                                JavaScript, HTML, and CSS. It may look simple,
-                                but it showed me a lot because I learned about
-                                making background data that virtually is the
-                                game. Then, after this data was established, use
-                                the data to play the game using other functions
-                                that manipulates the data accordingly. After
-                                this I had to us my HTML and CSS to show this
-                                data in a way the user could understand and
-                                enjoy. These to aspects taught me a lot about
-                                how the back of my program has to communicate
-                                with the front, and then provide something
-                                interesting and useful to the user.
-                            </h6>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card text-light">
-                <div class="card-body">
                     <h3 class="project_title">Web Rental Store</h3>
                     <div>
                         <h6 class="d-flex pr-2">
@@ -224,8 +218,8 @@
                             </p>
                         </h6>
                         <h6 class="d-flex pr-2">
-                            Programming Age:
-                            <p class="text-info pl-2">4 Months</p>
+                            Started:
+                            <p class="text-info pl-2">Oct 15, 2018</p>
                         </h6>
                         <div class="d-flex">
                             <h6>Link:</h6>
